lit-test/test/inferencer/error_illegal_builtin.py
# RUN: %python -m artiq.compiler.testbench.inferencer +diag %s >%t
# RUN: OutputCheck %s --file-to-check=%t

# CHECK-L: ${LINE:+1}: error: builtin function 'sequential' cannot be used in this context
sequential()
